--- a/conf/app.conf
+++ b/conf/app.conf
@@ -7,3 +7,5 @@ db_password = wsklm3151
 db_ip = 127.0.0.1:3306
 db_name = userperson
 file_size = 20000
+sms_access_key = LTAI4FydRQswZLg94JhLGRLp
+sms_access_secret = 8Stma2gzzZaGYGo0bQckBMziHO3FWx
